Install express and add readme

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contractbook_backend",
+  "name": "contactbook_backend",
   "version": "1.0.0",
   "description": "hoang phuc - A120v7x150",
   "main": "app.js",
